# deluminate

./: .gitignore  README.md  pyproject.toml
DELuminate/configs/: __init__.py  classnames.py  functional_groups.py  inputs.py  library_definition.py  monosynthon_exemplar.py  property_profiles.py  similarity.py  stereochemistry.py  visualization_column_coloring.json  visualizations.py  xsmiles.py  xviewer.py
DELuminate/enumeration/: enum_library_subset.py  exhaustive_enumeration.py  monosynthon_enumeration.py
DELuminate/filters/: classnames.py  deck.py  duplicate_enums.py  duplicate_xbbids.py  invalid_xsmiles.py  mw.py  stereoisomers.py  substructures.py  tbbs.py  validation.py  virtual_bbs.py
DELuminate/profiling/: calculate_physchem.py  plot_physchem.py
DELuminate/tools/: count_stereoisomers.py  directory_handling.py  generate_combinations.py  parallel_map.py  similarity.py  substructure_searching.py
DELuminate/transforms/: embeddings.py  monosynthon_exemplar_builder.py  rdkit_mols.py  react.py  xsmiles.py
DELuminate/visualization/: calculate_coordinates.py  generate_grid.py  plot.py
DELuminate/workflows/: enumerate_instances.py  postsynthesis.py  presynthesis.py  property_profiles.py  virtual_presynthesis.py  visualize_chemical_space.py  (+3 more)
Original_Implementation/: original_implementation.py
shell/: coords.sh  enumerate_instances.sh  plot.sh  postsynthesis.sh  presynthesis.sh  property_profiles.sh  virtual_presynthesis.sh  visualize_chemical_space.sh  xsmiles_disynthon_enumeration.sh  xsmiles_export_json.sh  xsmiles_instance_enumeration.sh
(+9 files in other folders)
